@@ -14,6 +14,8 @@
 11. Set vuetify 'accent' and 'primary' colours so that time picker uses chosen
     colour.
 12. Fix dark patch bottom-right of now-playing only view with light themes.
+13. When opening browse from now-playing/MAI try to go back to view
+    afterwards.
 
 4.5.2
 -----
